dropshot/tests/fail/bad_endpoint7.stderr
error[E0277]: the trait bound `Ret: serde::ser::Serialize` is not satisfied
    --> $DIR/bad_endpoint7.rs:25:13
     |
25   | ) -> Result<HttpResponseOk<Ret>, HttpError> {
     |             ^^^^^^^^^^^^^^^^^^^ the trait `serde::ser::Serialize` is not implemented for `Ret`
     |
note: required by a bound in `HttpResponseOk`
    --> $DIR/handler.rs:1216:43
     |
1216 | pub struct HttpResponseOk<T: JsonSchema + Serialize + Send + Sync + 'static>(
     |                                           ^^^^^^^^^ required by this bound in `HttpResponseOk`
